Contact section and paddings

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=location_onstartarrow_outward"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=location_onstartarrow_outward_mail_call"
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <style>
@@ -119,6 +119,9 @@
             </li>
             <li>
               <i class="devicon-python-plain-wordmark"></i>
+            </li>
+            <li>
+              <i class="devicon-flask-original-wordmark"></i>
             </li>
             <li>
               <i class="devicon-html5-plain-wordmark"></i>
@@ -232,19 +235,29 @@
     </section>
 
     <section id="contact">
-      <h2>Get in touch</h2>
-      <p>
-        If you want to create or just have ideas of an app you want to talk
-        about, don't hesitate to...
-      </p>
-      <div>
-        <a class="btn" href="mailto:stebane.soaharison@yahoo.com">
-          <p>Contact me</p>
-          <span style="font-size: 1.5rem" class="material-symbols-outlined">
-            start
-          </span>
-        </a>
+
+      <div class="container-contact">
+        <h2>Get in touch</h2>
+        <div class="container-contact-detail">
+          <div class="contact-detail mail">
+            <span class="material-symbols-outlined">
+              mail
+            </span>
+            <p class="text-location">stebane.soaharison@yahoo.com</p>
+          </div>
+          <div class="contact-detail number">
+            <span class="material-symbols-outlined">
+              call
+            </span>
+            <p class="text-location">+46 73 760 77 93</p>
+          </div>
+        </div>
       </div>
+      
+      <a class="btn" href="mailto:stebane.soaharison@yahoo.com">
+          <p>Contact me</p>
+      </a>
+
     </section>
 
     <footer>
