--- a/index.html
+++ b/index.html
@@ -139,13 +139,16 @@
       <ul class="container-all-project">
         <li>
           <hr />
-          <a
-            class="container-project"
-            href="https://github.com/StebaneJhon/Android-FlashCard-App.git"
-          >
+          <div class="container-project">
             <div class="project-details">
               <h3 class="name-project">Recall</h3>
-              <p class="description-project">Android-app</p>
+              <p class="description-project">
+                An Android-app, I have been developing for a long time. It  is currently in internal  testing on the Google play store. It is a quiz and flashcard creation application that lets you make your own quizzes or upload questions from an API, store them on your device and revise them through different mini-games.
+              </p>
+              <a class="to-github" href="https://github.com/StebaneJhon/Android-FlashCard-App.git">
+                To GitHub
+                <span class="material-symbols-outlined to-github-icon">arrow_outward</span>
+              </a>
             </div>
             <div class="container-image-project">
               <img
@@ -169,17 +172,20 @@
                 alt="Recall app image 4"
               />
             </div>
-          </a>
+          </div>
           <hr />
         </li>
         <li>
-          <a
-            class="container-project"
-            href="https://github.com/StebaneJhon/Quiz-app.git"
-          >
+          <div class="container-project" >
             <div class="project-details">
               <h3 class="name-project">Open Trivia Quiz</h3>
-              <p class="description-project">Android-app</p>
+              <p class="description-project">
+                An Android app for retrieving and taking quizzes from the Open Trivia Database API. This application is useful for those who want to challenge themselves with a quick quiz on a variety of subjects. It showcases my ability to call APIs, handle errors, and implement UI and UX design.
+              </p>
+              <a class="to-github" href="https://github.com/StebaneJhon/Quiz-app.git">
+                To GitHub
+                <span class="material-symbols-outlined to-github-icon">arrow_outward</span>
+              </a>
             </div>
             <div class="container-image-project">
               <img
@@ -203,17 +209,20 @@
                 alt="Quiz app image 1"
               />
             </div>
-          </a>
+          </div>
         </li>
         <li>
           <hr />
-          <a
-            class="container-project"
-            href="https://github.com/StebaneJhon/Punkts-Spel.git"
-          >
+          <div class="container-project">
             <div class="project-details">
               <h3 class="name-project">Punktens Spel</h3>
-              <p class="description-project">Android-app</p>
+              <p class="description-project">
+                An Android app that serves as a digital version of a game we used to play in school with pen and paper. This project challenged me in two main things:  Inventing algorithms by using mathematical concepts such as graphs and vectors, and adapting how the game plays while having an intuitive UX design.
+              </p>
+              <a class="to-github" href="https://github.com/StebaneJhon/Punkts-Spel.git">
+                To GitHub
+                <span class="material-symbols-outlined to-github-icon">arrow_outward</span>
+              </a>
             </div>
             <div class="container-image-project">
               <img
@@ -229,7 +238,8 @@
                 alt="Punktens spel app image 1"
               />
             </div>
-          </a>
+          </div>
+          <hr>
         </li>
       </ul>
     </section>
@@ -237,7 +247,7 @@
     <section id="contact">
 
       <div class="container-contact">
-        <h2>Get in touch</h2>
+        <h2>Get in touch!</h2>
         <div class="container-contact-detail">
           <div class="contact-detail mail">
             <span class="material-symbols-outlined">
