Texts update and refactoring

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </div>
         <div class="section-nav" id="navigation">
           <ul>
-            <li><a class="nav-buttons" href="#projects">Projects</a></li>
             <li><a class="nav-buttons" href="#about">About</a></li>
+            <li><a class="nav-buttons" href="#projects">Projects</a></li>
             <li><a class="nav-buttons" href="#contact">Contact</a></li>
           </ul>
         </div>
@@ -48,7 +48,7 @@
     <section id="hero">
       <div class="section-hero" id="introduction">
         <div>
-          <h1>Hi I'm Stebane</h1>
+          <h1>Hi, I’m Stebane</h1>
           <div class="container-location">
             <div>
               <span class="material-symbols-outlined location-icon">
@@ -58,10 +58,8 @@
             </div>
           </div>
           <p>
-            An <span class="text-app-developer">app-developer</span> who loves
-            creating products that focus on functionality, quality, and
-            simplicity. Life is already complicated enough, so why not introduce
-            a bit of ease into our digital tools ?
+            An <span class="text-app-developer">app developer</span> who loves creating products that focus on functionality, quality, and simplicity. 
+            Life is already complicated enough, so why not introduce a bit of ease into our digital tools?            
           </p>
         </div>
       </div>
@@ -80,10 +78,8 @@
       <div class="container-section-about">
         <div class="section-about">
           <p>
-            I started my coding journey as a self taught writing simple programs
-            using Python and Tkinter. Now I am an App-developer mainly focussed
-            on Android application development proficient in many related tools
-            and has multiple finished projects that can be seen below.
+            I started my coding journey through a self tuition method by writing simple programs using Python and Tkinter.
+            Later I became an App-developer mainly focused on Android application development with proficiency in diverse related tools and with several acomplished projects showed below. 
           </p>
         </div>
         <div class="section-about">
@@ -143,7 +139,7 @@
             <div class="project-details">
               <h3 class="name-project">Recall</h3>
               <p class="description-project">
-                An Android-app, I have been developing for a long time. It  is currently in internal  testing on the Google play store. It is a quiz and flashcard creation application that lets you make your own quizzes or upload questions from an API, store them on your device and revise them through different mini-games.
+                An Android-app I developed last year and is currently in internal testing on Google play store. It is a quiz and flashcard creation application that lets you make your own quizzes or upload questions from an API and enable them to be stored on your device and revise them through different mini-games.
               </p>
               <a class="to-github" href="https://github.com/StebaneJhon/Android-FlashCard-App.git">
                 To GitHub
@@ -217,7 +213,7 @@
             <div class="project-details">
               <h3 class="name-project">Punktens Spel</h3>
               <p class="description-project">
-                An Android app that serves as a digital version of a game we used to play in school with pen and paper. This project challenged me in two main things:  Inventing algorithms by using mathematical concepts such as graphs and vectors, and adapting how the game plays while having an intuitive UX design.
+                An Android app that serves as a digital version of a game that we used to play in school with pen and paper. This project challenged me in two major things :  Inventing algorithms by using mathematical concepts such as graphs and vectors, and adapting how the game can be played while having an intuitive UX design.
               </p>
               <a class="to-github" href="https://github.com/StebaneJhon/Punkts-Spel.git">
                 To GitHub
