--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
                 alt="Recall app image 2"
               />
               <img
-                class="image-project image-not-visible-on-tablet-and-below"
+                class="image-project image-not-visible-on-mobile"
                 src="./assets/images/recall_app_images/recall_app_demo_test.png"
                 alt="Recall app image 3"
               />
               <img
-                class="image-project image-not-visible-on-tablet-and-below"
+                class="image-project image-not-visible-on-tablet image-not-visible-on-mobile"
                 src="./assets/images/recall_app_images/recall_app_demo_deck_fragment.png"
                 alt="Recall app image 4"
               />
@@ -195,12 +195,12 @@
                 alt="Quiz app image 1"
               />
               <img
-                class="image-project image-not-visible-on-tablet-and-below"
+                class="image-project image-not-visible-on-mobile"
                 src="./assets/images/quiz_app_images/quiz-app-review.png"
                 alt="Quiz app image 1"
               />
               <img
-                class="image-project image-not-visible-on-tablet-and-below"
+                class="image-project image-not-visible-on-tablet image-not-visible-on-mobile"
                 src="./assets/images/quiz_app_images/quiz-app-settings.png"
                 alt="Quiz app image 1"
               />
@@ -229,7 +229,7 @@
               />
               <img
                 id="punktensSpel"
-                class="image-project image-not-visible-on-tablet-and-below"
+                class="image-project image-not-visible-on-tablet image-not-visible-on-mobile"
                 src="./assets/images/punktens_spel_app_images/punktens_spell_about_to_catch.png"
                 alt="Punktens spel app image 1"
               />
